add login card component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,8 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+<app-login-card></app-login-card>
+
 
 
 <router-outlet />
