add initial register component.

--- a/src/app/components/login/login-card/login-card.component.html
+++ b/src/app/components/login/login-card/login-card.component.html
@@ -22,7 +22,7 @@
       </div>
 
       <!-- <div class="login-button-container"> -->
-      <p-button icon="/assets/icons/login.svg" label="Entra">
+      <p-button label="Entra">
         <img src="/assets/icons/login.svg" alt="Login Icon">
       </p-button>
       <!-- </div> -->
