--- a/src/app/components/register/register-main/register-main.component.html
+++ b/src/app/components/register/register-main/register-main.component.html
@@ -1,2 +1,4 @@
 <app-header></app-header>
-<app-register-card></app-register-card>
+<div class="register-card-wrapper">
+  <app-register-card></app-register-card>
+</div>
