--- a/src/app/components/login/login-card/login-card.component.html
+++ b/src/app/components/login/login-card/login-card.component.html
@@ -29,7 +29,7 @@
 
 
       <div class="create-account-container">
-        Crear compte
+        <a href="register">Crear compte</a>
       </div>
       <div class="login-form"></div>
       <!-- </form> -->
