--- a/src/app/components/register/register-card/register-card.component.scss
+++ b/src/app/components/register/register-card/register-card.component.scss
@@ -100,6 +100,7 @@
       flex-direction: column;
       align-items: flex-start;
       gap: 50px;
+      width: 100%;
 
       .phase1-login-info {
         display: flex;
