add register templates for steps two and three

--- a/src/app/components/register/register-main/register-main.component.html
+++ b/src/app/components/register/register-main/register-main.component.html
@@ -1,4 +1,11 @@
 <app-header></app-header>
-<div class="register-card-wrapper">
+<!-- <div class="register-card-wrapper">
   <app-register-card></app-register-card>
+</div> -->
+
+
+<div class="dummy-register-lines">
+  <app-register-card></app-register-card>
+  <app-register-card-ph2></app-register-card-ph2>
+  <app-register-card-ph3></app-register-card-ph3>
 </div>
