--- a/src/app/components/register/phases/register-card-ph2/register-card-ph2.component.scss
+++ b/src/app/components/register/phases/register-card-ph2/register-card-ph2.component.scss
@@ -3,6 +3,7 @@
   width: 1200px;
   min-width: 760px;
   align-items: stretch;
+  height: 556px;
 
   border-radius: 30px;
   background: #68a68f;
@@ -116,15 +117,35 @@
         font-weight: 500;
         line-height: 24px; /* 100% */
 
-        .phase1-login-form {
+        .horizontal-fields-display {
           display: flex;
-          flex-direction: column;
           align-items: flex-start;
           gap: 16px;
           font-size: 16px;
 
           input {
             width: 100%;
+            padding-top: 14px;
+            padding-bottom: 14px;
+          }
+        }
+
+        .phase1-login-form {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 16px;
+          font-size: 16px;
+          max-width: 244px;
+
+          input {
+            width: 100%;
+            padding-top: 14px;
+            padding-bottom: 14px;
+          }
+
+          ::ng-deep .p-datepicker-input {
+            // width: 80%;
             padding-top: 14px;
             padding-bottom: 14px;
           }
@@ -158,6 +179,12 @@
             font-weight: 400;
             line-height: 24px;
           }
+        }
+
+        .input-rows {
+          display: flex;
+          flex-direction: column;
+          gap: 16px;
         }
       }
 
