--- a/src/app/components/register/register-main/register-main.component.scss
+++ b/src/app/components/register/register-main/register-main.component.scss
@@ -1,7 +1,17 @@
 .register-card-wrapper {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: calc(100vh - 76px);
   width: 100vw;
+}
+
+.dummy-register-lines {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
