work on register component

--- a/src/app/components/register/phases/register-card-ph2/register-card-ph2.component.html
+++ b/src/app/components/register/phases/register-card-ph2/register-card-ph2.component.html
@@ -85,6 +85,8 @@
         </div>
       </div>
       <div class="phase1-footer">
+        <p-button class="back-btn" label="Enrere" [link]="true"> <img src="/assets/icons/chevron-left.svg"
+            alt="Login Icon"></p-button>
         <!-- Next Button -->
         <p-button label="Següent">
           <img src="/assets/icons/chevron-right.svg" alt="Login Icon">
