--- a/src/app/components/register/register-main/register-main.component.html
+++ b/src/app/components/register/register-main/register-main.component.html
@@ -8,4 +8,5 @@
   <app-register-card></app-register-card>
   <app-register-card-ph2></app-register-card-ph2>
   <app-register-card-ph3></app-register-card-ph3>
+  <app-register-card-ph4></app-register-card-ph4>
 </div>
