--- a/src/app/components/register/phases/register-card-ph4/register-card-ph4.component.scss
+++ b/src/app/components/register/phases/register-card-ph4/register-card-ph4.component.scss
@@ -107,9 +107,10 @@
       .phase1-login-info {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
         gap: 36px;
         align-self: stretch;
+        justify-content: center;
 
         color: #262626;
         font-family: Inter;
@@ -117,6 +118,25 @@
         font-style: normal;
         font-weight: 500;
         line-height: 24px; /* 100% */
+
+        .validate-desc {
+          color: #262626;
+          text-align: center;
+          font-family: Inter;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 24px; /* 150% */
+
+          .validate-desc-sub {
+            color: #262626;
+            font-family: Inter;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 24px;
+          }
+        }
 
         .horizontal-fields-display {
           display: flex;
@@ -187,21 +207,27 @@
           flex-direction: column;
           gap: 16px;
         }
-      }
 
-      .phase1-footer {
-        display: flex;
-        padding-top: 20px;
-        justify-content: flex-end;
-        align-items: center;
-        gap: 10px;
-        align-self: stretch;
-        margin-top: auto;
-        border-top: 1px solid #d9d9d9;
-
-        .back-btn {
-          margin-right: auto;
+        .validate-resend {
+          color: #7c7c7c;
+          font-family: Inter;
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 14px; /* 116.667% */
+          text-decoration-line: underline;
+          text-decoration-style: solid;
+          text-decoration-skip-ink: auto;
+          text-decoration-thickness: auto;
+          text-underline-offset: auto;
+          text-underline-position: from-font;
         }
+      }
+      .back-next-buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 16px;
       }
     }
   }
