--- a/src/app/components/register/phases/register-card/register-card.component.scss
+++ b/src/app/components/register/phases/register-card/register-card.component.scss
@@ -102,6 +102,7 @@
       align-items: flex-start;
       gap: 50px;
       width: 100%;
+      height: 100%;
 
       .phase1-login-info {
         display: flex;
@@ -169,7 +170,7 @@
         align-items: center;
         gap: 10px;
         align-self: stretch;
-
+        margin-top: auto;
         border-top: 1px solid #d9d9d9;
       }
     }
