work on phase 4 register component

--- a/src/app/components/register/phases/register-card-ph4/register-card-ph4.component.html
+++ b/src/app/components/register/phases/register-card-ph4/register-card-ph4.component.html
@@ -67,9 +67,13 @@
         <div class="validate-resend">
           Torna a enviar el codi
         </div>
-        <div class="back-next-buttons">
-          <p-button label="Finalitzar"></p-button>
-          <p-button label="Enrere" [link]="true"> <img src="/assets/icons/chevron-left.svg" alt="Login Icon"></p-button>
+        <div class="phase1-footer">
+          <p-button class="back-btn" label="Enrere" [link]="true"> <img src="/assets/icons/chevron-left.svg"
+              alt="Login Icon"></p-button>
+          <!-- Next Button -->
+          <p-button label="Finalitzar">
+            <img src="/assets/icons/chevron-right.svg" alt="Login Icon">
+          </p-button>
         </div>
 
 
