--- a/src/app/components/register/phases/register-card-ph4/register-card-ph4.component.scss
+++ b/src/app/components/register/phases/register-card-ph4/register-card-ph4.component.scss
@@ -111,6 +111,7 @@
         gap: 36px;
         align-self: stretch;
         justify-content: center;
+        height: 100%;
 
         color: #262626;
         font-family: Inter;
@@ -223,11 +224,20 @@
           text-underline-position: from-font;
         }
       }
-      .back-next-buttons {
+      .phase1-footer {
         display: flex;
-        flex-direction: column;
+        padding-top: 20px;
+        justify-content: flex-end;
         align-items: center;
-        gap: 16px;
+        gap: 10px;
+        align-self: stretch;
+        margin-top: auto;
+
+        border-top: 1px solid #d9d9d9;
+
+        .back-btn {
+          margin-right: auto;
+        }
       }
     }
   }
