change register architecture

--- a/src/app/components/register/register-main/register-main.component.html
+++ b/src/app/components/register/register-main/register-main.component.html
@@ -1,12 +1,12 @@
-<app-header></app-header>
-<!-- <div class="register-card-wrapper">
+<!-- <app-header></app-header>
+ <div class="register-card-wrapper">
    <app-register-card></app-register-card>
 </div> -->
 
-
+<!--
 <div class="dummy-register-lines">
   <app-register-card></app-register-card>
   <app-register-card-ph2></app-register-card-ph2>
   <app-register-card-ph3></app-register-card-ph3>
   <app-register-card-ph4></app-register-card-ph4>
-</div>
+</div> -->
