--- a/src/app/components/register/register-main/register-main.component.html
+++ b/src/app/components/register/register-main/register-main.component.html
@@ -1,12 +1,98 @@
-<!-- <app-header></app-header>
- <div class="register-card-wrapper">
-   <app-register-card></app-register-card>
-</div> -->
+<app-header></app-header>
+<div class="register-card-wrapper">
 
-<!--
-<div class="dummy-register-lines">
-  <app-register-card></app-register-card>
-  <app-register-card-ph2></app-register-card-ph2>
-  <app-register-card-ph3></app-register-card-ph3>
-  <app-register-card-ph4></app-register-card-ph4>
-</div> -->
+  <div class="register-mainframe">
+    <div class="register-stepper-main">
+
+      <div class="register-stepper-contents">
+        Registre
+        <div class="register-stepper-phases">
+          <div class="register-phase phase-active">
+            <div class="register-phase-level phase-level-active">
+              1
+            </div>
+            Crear compte
+          </div>
+          <div class="register-phase-line">
+            <svg width="4" height="28" viewBox="0 0 4 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M2 1.5L2 26.5" stroke-width="3" stroke-linecap="round" />
+            </svg>
+          </div>
+          <div class="register-phase">
+            <div class="register-phase-level">
+              2
+            </div>
+            Dades personals
+          </div>
+          <div class="register-phase-line">
+            <svg width="4" height="28" viewBox="0 0 4 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M2 1.5L2 26.5" stroke-width="3" stroke-linecap="round" />
+            </svg>
+          </div>
+          <div class="register-phase">
+            <div class="register-phase-level">
+              3
+            </div>
+            Dades d'enviament
+          </div>
+          <div class="register-phase-line">
+            <svg width="4" height="28" viewBox="0 0 4 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M2 1.5L2 26.5" stroke-width="3" stroke-linecap="round" />
+            </svg>
+          </div>
+          <div class="register-phase">
+            <div class="register-phase-level">
+              4
+            </div>
+            Validar compte
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="register-contents-main">
+      <div class="contents-phase1">
+
+        <!-- Phase dynamic contents -->
+
+        @switch (currentStep) {
+        @case (0) {
+        <app-register-step-login [form]="loginForm"></app-register-step-login>
+        }
+        @case (1) {
+        <app-register-step-personal [form]="personalForm"></app-register-step-personal>
+        }
+        @case (2) {
+        <app-register-step-address [form]="addressForm"></app-register-step-address>
+        }
+        @case (3) {
+        <app-register-step-totp [form]="totpForm"></app-register-step-totp>
+        }
+        }
+
+        <div class="phase1-footer">
+          @if (currentStep > 0) {
+          <p-button class="back-btn" label="Enrere" [link]="true" (onClick)="prevStep()">
+            <img src="/assets/icons/chevron-left.svg" alt="Login Icon">
+          </p-button>
+          }
+
+          @if (currentStep < steps.length - 1) { <p-button label="Següent" (onClick)="nextStep()">
+            <img src="/assets/icons/chevron-right.svg" alt="Login Icon">
+            </p-button>
+            } @else {
+            <p-button label="Finalitzar" (onClick)="nextStep()">
+              <img src="/assets/icons/chevron-right.svg" alt="Login Icon">
+            </p-button>
+            }
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+</div>
