--- a/src/app/components/register/register-main/register-main.component.scss
+++ b/src/app/components/register/register-main/register-main.component.scss
@@ -7,11 +7,127 @@
   width: 100vw;
 }
 
-.dummy-register-lines {
+.register-mainframe {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
+  width: 1200px;
+  min-width: 760px;
+  align-items: stretch;
+  height: 556px;
+
+  border-radius: 30px;
+  background: #68a68f;
+  box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.1);
+
+  .register-stepper-main {
+    display: flex;
+    width: 350px;
+    min-width: 220px;
+    padding: 50px 35px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex-shrink: 0;
+    align-self: stretch;
+
+    // Typ
+    color: #fff;
+    font-family: Inter;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 48px; /* 133.333% */
+
+    .register-stepper-phases {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 12px;
+      align-self: stretch;
+      margin-top: 24px;
+
+      .register-phase {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        align-self: stretch;
+
+        // typ
+        color: #fff;
+        font-family: Inter;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 24px; /* 100% */
+
+        .register-phase-level {
+          display: flex;
+          width: 36px;
+          height: 36px;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+
+          border-radius: 50px;
+          background: #fff;
+
+          //typ
+          color: #89bfaa;
+          font-family: Inter;
+          font-size: 24px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 24px; /* 100% */
+        }
+      }
+      .register-phase-line {
+        display: flex;
+        width: 36px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+
+        svg {
+          stroke: white;
+        }
+      }
+    }
+  }
+
+  .register-contents-main {
+    display: flex;
+    width: 850px;
+    min-width: 430px;
+    padding: 50px 80px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 30px;
+    background: #fff;
+
+    .contents-phase1 {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 50px;
+      width: 100%;
+      height: 100%;
+
+      .phase1-footer {
+        display: flex;
+        padding-top: 20px;
+        justify-content: flex-end;
+        align-items: center;
+        gap: 10px;
+        align-self: stretch;
+        margin-top: auto;
+
+        border-top: 1px solid #d9d9d9;
+
+        .back-btn {
+          margin-right: auto;
+        }
+      }
+    }
+  }
 }
