add dynamic scss for register phases

--- a/src/app/components/register/phases/register-step-address/register-step-address.component.html
+++ b/src/app/components/register/phases/register-step-address/register-step-address.component.html
@@ -1,5 +1,5 @@
 <div class="phase1-login-info">
-  ADREÇA D'ENVIAMENT
+  Adreça d'enviament
   <div class="input-rows">
 
     <div class="horizontal-fields-display">
