--- a/src/app/components/register/phases/register-step-personal/register-step-personal.component.html
+++ b/src/app/components/register/phases/register-step-personal/register-step-personal.component.html
@@ -1,5 +1,5 @@
 <div class="phase1-login-info">
-  DADES D'IDENTIFICACIÓ
+  Dades d'identificació
   <div class="input-rows">
 
 
@@ -22,7 +22,7 @@
       </p-floatlabel>
     </div>
   </div>
-  CONTACTE
+  Contacte
 
   <div class="phase1-login-form">
     <p-floatlabel variant="on">
