--- a/src/app/components/register/phases/register-step-totp/register-step-totp.component.html
+++ b/src/app/components/register/phases/register-step-totp/register-step-totp.component.html
@@ -1,5 +1,5 @@
 <div class="phase1-login-info">
-  VALIDAR EL COMPTE
+  Validar el compte
 
   <div class="validate-desc">
     T'hem enviat un codi de verificació al teu correu electrònic.<br>
