--- a/src/app/components/register/register-main/register-main.component.scss
+++ b/src/app/components/register/register-main/register-main.component.scss
@@ -53,12 +53,16 @@
         align-self: stretch;
 
         // typ
-        color: #fff;
+        color: #366b59;
         font-family: Inter;
         font-size: 24px;
         font-style: normal;
         font-weight: 500;
         line-height: 24px; /* 100% */
+
+        .register-phase-title.active {
+          color: #fff;
+        }
 
         .register-phase-level {
           display: flex;
@@ -69,8 +73,7 @@
           align-items: center;
 
           border-radius: 50px;
-          background: #fff;
-
+          background: #366b59;
           //typ
           color: #89bfaa;
           font-family: Inter;
@@ -78,6 +81,10 @@
           font-style: normal;
           font-weight: 400;
           line-height: 24px; /* 100% */
+
+          &.active {
+            background: #fff;
+          }
         }
       }
       .register-phase-line {
@@ -88,7 +95,13 @@
         gap: 10px;
 
         svg {
-          stroke: white;
+          stroke: #366b59;
+        }
+
+        &.active {
+          svg {
+            stroke: #fff;
+          }
         }
       }
     }
