--- a/src/app/components/register/phases/register-step-login/register-step-login.component.scss
+++ b/src/app/components/register/phases/register-step-login/register-step-login.component.scss
@@ -20,7 +20,13 @@
     font-size: 16px;
 
     input {
-      width: 100%;
+      width: 250px;
+      padding-top: 14px;
+      padding-bottom: 14px;
+    }
+
+    ::ng-deep .p-password-input {
+      width: 250px;
       padding-top: 14px;
       padding-bottom: 14px;
     }
