--- a/src/app/components/register/phases/register-step-totp/register-step-totp.component.html
+++ b/src/app/components/register/phases/register-step-totp/register-step-totp.component.html
@@ -1,18 +1,21 @@
-<div class="phase1-login-info">
-  Validar el compte
+<form [formGroup]="form">
+  <div class="phase1-login-info">
+    Validar el compte
 
-  <div class="validate-desc">
-    T'hem enviat un codi de verificació al teu correu electrònic.<br>
-    <div class="validate-desc-sub">
-      Revisa la teva bústia d'entrada (i també la carpeta de correu no desitjat o spam). Introdueix el codi de 4
-      dígits que t’hem enviat per continuar amb el registre.
+    <div class="validate-desc">
+      T'hem enviat un codi de verificació al teu correu electrònic.<br>
+      <div class="validate-desc-sub">
+        Revisa la teva bústia d'entrada (i també la carpeta de correu no desitjat o spam). Introdueix el codi de 4
+        dígits que t’hem enviat per continuar amb el registre.
+      </div>
+
     </div>
 
-  </div>
+    <!-- <p-inputotp formControlName="totp" size="large" [invalid]="isInvalid('totp')" /> -->
+    <app-otp-input formControlName="totp"></app-otp-input>
 
-  <p-inputotp [(ngModel)]="value3" size="large" />
-
-  <div class="validate-resend">
-    Torna a enviar el codi
+    <div class="validate-resend">
+      Torna a enviar el codi
+    </div>
   </div>
-</div>
+</form>
